# httpserver

./: CMakeLists.txt
src/: main.c
src/util/: readfulltextfile.c  readfulltextfile.h
